<resources>
    <string name="app_name">HIT Music</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="select_method">OTP will be sent to this email to reset your password</string>
    <string name="send_code">Code has been send to </string>
    <string name="create_new_password">Create your new password</string>
    <string name="title_activity_authentication">AuthenticationActivity</string>

    <string name="welcome">Welcome</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="login_your_account">Login Your Account</string>
    <string name="already_have_an_account_sign_in">Already have an account?</string>
    <string name="do_not_have_an_account_sign_up">Do not have an account?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_the_password">Forgot the password?</string>
    <string name="redirect">You will be redirect in few seconds...</string>
    <string name="reset_successful">Reset successful</string>
    <string name="confirm_password">Confirm password</string>
    <string name="fill_your_profile">Fill Your Profile</string>
    <string name="full_name">Full Name</string>
    <string name="nick_name">NickName</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="phone_number"> Phone Number </string>
    <string name="skip"> Skip</string>
    <string name="continue_1"> Continue</string>
    <string name="home"> Home</string>
    <string name="explore"> Explore</string>
    <string name="library"> Library</string>
    <string name="profile"> Profile</string>
    <string name="popular_artists">Popular artists</string>
    <string name="favourite_songs">Favourite songs</string>
    <string name="browse_all">Browse all</string>
    <string name="singer">Singers</string>
    <string name="songs">Songs</string>
    <string name="playlists">Playlists</string>
    <string name="trending_now">Trending now</string>


    <string name="notification"> Notification</string>
    <string name="audio_video"> Audio &amp; Video</string>
    <string name="playback"> Playback</string>
    <string name="data_saver"> Data Saver &amp; Storage</string>
    <string name="security"> Security</string>
    <string name="language"> Language</string>
    <string name="vietnam"> Viet Nam</string>
    <string name="english"> English</string>
    <string name="dark_mode"> Dark Mode</string>
    <string name="log_out">Logout</string>
    <string name="are_you">Are you sure you want to log out?</string>
    <string name="cancel">Cancel</string>
    <string name="yes_log_out">Yes,Logout</string>
    <string name="suggested">Suggested</string>
    <string name="others">Others</string>
    <string name="korean">Korean</string>
    <string name="hindi">Hindi</string>
    <string name="japanese">Japanese</string>
    <string name="french">French</string>
    <string name="arabic">Arabic</string>
    <string name="spanish">Spanish</string>
    <string name="russian">Russian</string>
    <string name="indonesia">Indonesia</string>
    <string name="change_pin">Change PIN</string>
    <string name="change_password">Change Password</string>
    <string name="gapless">Gapless</string>
    <string name="allows_gapless_playback">Allows gapless playback</string>
    <string name="automix">Automix</string>
    <string name="allows_seamless_transitions_between_songs_on_select_playlists">Allows seamless transitions between songs on select playlists</string>
    <string name="allow_explicit_content">Allow Explicit Content</string>
    <string name="turn_on_play_explicit_content">Turn on play explicit content</string>
    <string name="show_unplayable_songs">Show Unplayable Songs</string>
    <string name="show_song_that_are_unplayable">Show song that are unplayable</string>
    <string name="normalize_volume">Normalize Volume</string>
    <string name="mono_audio">Mono Audio</string>
    <string name="set_the_same_volume_level_for_all_tracks">Set the same volume level for all tracks</string>
    <string name="makes_the_left_and_right_speakers_play_the_same_audio">Makes the left and right speakers play the same audio</string>
    <string name="device_broadcast_status">Device Broadcast Status</string>
    <string name="allow_other_apps_on_your_device_to_see_that_you_are_listening_to">Allow other apps on your device to see that you are listening to</string>
    <string name="autoplay_on_this_device">Autoplay on This Device</string>
    <string name="autoplay_similiar_songs_when_your_music_on_this_app">Autoplay similiar songs when your music on this app</string>
    <string name="autoplay_on_other_devices">Autoplay on Other Devices</string>
    <string name="autoplay_similar_songs_when_your_music_ends_on_other_devices">Autoplay similar songs when your music ends on other devices</string>
    <string name="recommended_music">Recommended Music</string>
    <string name="push_email">Push, Email</string>
    <string name="new_music">New Music</string>
    <string name="push">Push</string>
    <string name="playlist_updates">Playlist Updates</string>
    <string name="concert_notifications">Concert Notifications</string>
    <string name="artist_updates">Artist Updates</string>
    <string name="product_news">Product News</string>
    <string name="hearme_offers">Hearme Offers</string>
    <string name="new_episodes">New Episodes</string>
    <string name="payments_subscriptions"><![CDATA[Payments & Subscriptions]]></string>
    <string name="new_features">New Features</string>
    <string name="audio_quality">Audio Quality</string>
    <string name="wi_fi_streaming">Wi-Fi Streaming</string>
    <string name="high">High</string>
    <string name="data_cellular_streaming">Data Cellular Streaming</string>
    <string name="automatic">Automatic</string>
    <string name="auto_adjust_quality">Auto Adjust Quality</string>
    <string name="download">Download</string>
    <string name="normal">Normal</string>
    <string name="download_only_using_data_cellular">Download Only Using Data Cellular</string>
    <string name="video_quality">Video Quality</string>
    <string name="medium">Medium</string>
    <string name="data_saver1">Data Saver</string>
    <string name="sets_your_audio_quality_to_low_24kbit_s_and_disables_artist_canvases">Sets your audio quality to low (24kbit/s) and disables artist canvases</string>
    <string name="download_audio_only">Download Audio Only</string>
    <string name="stream_audio_only">Stream Audio Only</string>
    <string name="play_video_podcasts_as_audio_only_when_not_connected_on_wi_fi">Play video podcasts as audio only when not connected on Wi-Fi</string>
    <string name="other_apps">Other Apps</string>
    <string name="_75_4_gb">75.4 GB</string>
    <string name="_120_6_mb">120.6 MB</string>
    <string name="free_space">Free Space</string>
    <string name="remove_all_downloads">Remove All Downloads</string>
    <string name="remove_all_of_the_hearme_content_you_have_downloaded_for_offline_uses">Remove all of the Hearme content you have downloaded for offline uses</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="storage">Storage</string>
    <string name="cache">Cache</string>
    <string name="podcasts">Podcasts</string>
    <string name="save_video_podcasts_as_audio_only">Save video podcasts as audio only</string>
    <string name="_50_5_gb">50.5 GB</string>
    <string name="free_up_storage_without_removing_your_downloaded_contents">Free up storage without removing your downloaded contents</string>
    <string name="equalizer">Equalizer</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="followers">Followers</string>
    <string name="username_and_password_cannot_be_left_blank">Username and password cannot be left blank</string>
    <string name="username_or_password_is_incorrect">Username or password is incorrect!</string>
    <string name="username">UserName</string>
    <string name="data_cannot_be_left_blank">Data cannot be left blank</string>
    <string name="password_andpassword_again_must_be_same">Password and passwordAgain must be same</string>
    <string name="sig_up_success">Sign Up Success</string>

</resources>