<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/SCREEN"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".screen.user.profile.DataStorageFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            style="@style/BACK"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center" />

        <TextView
            style="@style/TEXT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/nunito_extra_bold_800"
            android:text="@string/data_saver"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        style="@style/TEXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/nunito_extra_bold_800"
        android:text="@string/data_saver1"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/teal_200">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="vertical">

            <TextView
                style="@style/TEXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_extra_bold_800"
                android:text="@string/audio_quality"
                android:textSize="17sp" />

            <TextView
                style="@style/TEXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/sets_your_audio_quality_to_low_24kbit_s_and_disables_artist_canvases"
                android:textSize="14sp" />
        </LinearLayout>

        <Switch
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:gravity="center" />
    </LinearLayout>

    <TextView
        style="@style/TEXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/nunito_extra_bold_800"
        android:text="@string/podcasts"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/teal_200">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="vertical">

            <TextView
                style="@style/TEXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_extra_bold_800"
                android:text="@string/download_audio_only"
                android:textSize="17sp" />

            <TextView
                style="@style/TEXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/save_video_podcasts_as_audio_only"
                android:textSize="14sp" />
        </LinearLayout>

        <Switch
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="vertical">

            <TextView
                style="@style/TEXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_extra_bold_800"
                android:text="@string/stream_audio_only"
                android:textSize="17sp" />

            <TextView
                style="@style/TEXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/play_video_podcasts_as_audio_only_when_not_connected_on_wi_fi"
                android:textSize="14sp" />
        </LinearLayout>

        <Switch
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:gravity="center" />
    </LinearLayout>

    <TextView
        style="@style/TEXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/nunito_extra_bold_800"
        android:text="@string/storage"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/teal_200">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <TextView
            style="@style/TEXT"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:fontFamily="@font/nunito_semi_bold_600"
            android:text="@string/other_apps"
            android:textSize="17sp" />

        <TextView
            style="@style/TEXT"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="@font/nunito_semi_bold_600"
            android:gravity="center"
            android:text="@string/_75_4_gb"
            android:textSize="17sp" />

        <ImageView
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:layout_gravity="center"
            android:src="@drawable/next"
            android:theme="@style/ImageView" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            style="@style/TEXT"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:fontFamily="@font/nunito_semi_bold_600"
            android:text="@string/cache"
            android:textSize="17sp" />

        <TextView
            style="@style/TEXT"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="@font/nunito_semi_bold_600"
            android:gravity="center"
            android:text="@string/_120_6_mb"
            android:textSize="17sp" />

        <ImageView
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:layout_gravity="center"
            android:src="@drawable/next"
            android:theme="@style/ImageView" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            style="@style/TEXT"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:fontFamily="@font/nunito_semi_bold_600"
            android:text="@string/free_space"
            android:textSize="17sp" />

        <TextView
            style="@style/TEXT"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="@font/nunito_semi_bold_600"
            android:gravity="center"
            android:text="@string/_50_5_gb"
            android:textSize="17sp" />

        <ImageView
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:layout_gravity="center"
            android:src="@drawable/next"
            android:theme="@style/ImageView" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="vertical">

            <TextView
                style="@style/TEXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_extra_bold_800"
                android:text="@string/remove_all_downloads"
                android:textSize="17sp" />

            <TextView
                style="@style/TEXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/remove_all_of_the_hearme_content_you_have_downloaded_for_offline_uses"
                android:textSize="14sp" />

        </LinearLayout>

        <ImageView
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:layout_gravity="center"
            android:src="@drawable/next"
            android:theme="@style/ImageView" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="vertical">

            <TextView
                style="@style/TEXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_extra_bold_800"
                android:text="@string/clear_cache"
                android:textSize="17sp" />

            <TextView
                style="@style/TEXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/free_up_storage_without_removing_your_downloaded_contents"
                android:textSize="14sp" />

        </LinearLayout>

        <ImageView
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:layout_gravity="center"
            android:src="@drawable/next"
            android:theme="@style/ImageView" />
    </LinearLayout>

</LinearLayout>