<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/SCREEN"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".user.profile.PlaybackFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            style="@style/BACK"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center" />

        <TextView
            style="@style/TEXT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/nunito_extra_bold_800"
            android:text="@string/playback"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="vertical">

            <TextView
                style="@style/TEXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_extra_bold_800"
                android:text="@string/gapless"
                android:textSize="17sp" />

            <TextView
                style="@style/TEXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/allows_gapless_playback"
                android:textSize="14sp" />

        </LinearLayout>

        <Switch
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="vertical">

            <TextView
                style="@style/TEXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_extra_bold_800"
                android:text="@string/automix"
                android:textSize="17sp" />

            <TextView
                style="@style/TEXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/allows_seamless_transitions_between_songs_on_select_playlists"
                android:textSize="14sp" />

        </LinearLayout>

        <Switch
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="vertical">

            <TextView
                style="@style/TEXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_extra_bold_800"
                android:text="@string/allow_explicit_content"

                android:textSize="17sp" />

            <TextView
                style="@style/TEXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/turn_on_play_explicit_content"
                android:textSize="14sp" />

        </LinearLayout>

        <Switch
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="vertical">

            <TextView
                style="@style/TEXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_extra_bold_800"
                android:text="@string/show_unplayable_songs"
                android:textSize="17sp" />

            <TextView
                style="@style/TEXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/show_song_that_are_unplayable"
                android:textSize="14sp" />

        </LinearLayout>

        <Switch
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="vertical">

            <TextView
                style="@style/TEXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_extra_bold_800"
                android:text="@string/normalize_volume"

                android:textSize="17sp" />

            <TextView
                style="@style/TEXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/set_the_same_volume_level_for_all_tracks"
                android:textSize="14sp" />

        </LinearLayout>

        <Switch
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="vertical">

            <TextView
                style="@style/TEXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_extra_bold_800"
                android:text="@string/mono_audio"

                android:textSize="17sp" />

            <TextView
                style="@style/TEXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/makes_the_left_and_right_speakers_play_the_same_audio"
                android:textSize="14sp" />

        </LinearLayout>

        <Switch
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="vertical">

            <TextView
                style="@style/TEXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_extra_bold_800"
                android:text="@string/device_broadcast_status"

                android:textSize="17sp" />

            <TextView
                style="@style/TEXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/allow_other_apps_on_your_device_to_see_that_you_are_listening_to"
                android:textSize="14sp" />

        </LinearLayout>

        <Switch
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="vertical">

            <TextView
                style="@style/TEXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_extra_bold_800"
                android:text="@string/autoplay_on_this_device"

                android:textSize="17sp" />

            <TextView
                style="@style/TEXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/autoplay_similiar_songs_when_your_music_on_this_app"
                android:textSize="14sp" />

        </LinearLayout>

        <Switch
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="vertical">

            <TextView
                style="@style/TEXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_extra_bold_800"
                android:text="@string/autoplay_on_other_devices"

                android:textSize="17sp" />

            <TextView
                style="@style/TEXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/autoplay_similar_songs_when_your_music_ends_on_other_devices"
                android:textSize="14sp" />

        </LinearLayout>

        <Switch
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="center" />
    </LinearLayout>


</LinearLayout>